--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <img src="logo.jpg" width="70" height="50">
+            <img src="logo.png" width="70" height="50">
         </div>
     </body>
 </html>
