--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="header">
-            <img src="logo.png" width="70" height="50">
-        </div>
+        <header class="header" id="instagram-header">
+            <div>
+                <a href="https://www.instagram.com/"><img src="logo.png"> <img src="instacurs.png"></a>
+            </div>
+        </header>
     </body>
 </html>
