--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     </head>
     <body>
         <header class="header" id="instagram-header">
-            <div>
-                <a href="https://www.instagram.com/"><img src="logo.png"> <img src="instacurs.png"></a>
-            </div>
+            <a href="https://www.instagram.com/" id="logo"><img src="logo.png" id="logoPic"> 
+                <img src="instacurs.png" id="cursiveLogo"></a>
         </header>
     </body>
 </html>
