--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     </head>
     <body>
         <header class="header" id="instagram-header">
-            <a href="https://www.instagram.com/" id="logo"><img src="logo.png" id="logoPic"> 
+            <a href="https://www.instagram.com/" id="logo"><img src="logo.png" id="logoPic">
                 <img src="instacurs.png" id="cursiveLogo"></a>
+
+            <input type="search" id="searchbox">
         </header>
     </body>
 </html>
