--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     </head>
     <body>
         <header class="header" id="instagram-header">
-            <a href="https://www.instagram.com/" id="logo"><img src="logo.png" id="logoPic">
-                <img src="instacurs.png" id="cursiveLogo"></a>
+            <a href="https://www.instagram.com/" id="logo">
+                <img src="logo.png" id="logoPic">
+                <img src="instacurs.png" id="cursiveLogo">
+            </a>
 
-            <input type="search" id="searchbox">
+            <input type="search" id="searchbox" placeholder="Search">
+
+            <nav class="header-buttons" id="heade-rbuttons">
+                <a href="#">
+                    <img src="discover.png" id="discover-logo">
+                </a>
+                <a href="#">
+                    <img src="like.png" id="like-logo">
+                </a>
+                <a href="#">
+                    <img src="profile.jpg" id="profile-logo">
+                </a>
+            </nav>
         </header>
     </body>
 </html>
