--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <body>
         <header class="header" id="instagram-header">
             <a href="https://www.instagram.com/" id="logo">
-                <img src="logo.png" id="logoPic">
-                <img src="instacurs.png" id="cursiveLogo">
+                <img src="logo.png" id="logoPic"><img src="instacurs.png" id="cursiveLogo">
             </a>
-
             <input type="search" id="searchbox" placeholder="Search">
-
             <nav class="header-buttons" id="heade-rbuttons">
                 <a href="#">
                     <img src="discover.png" id="discover-logo">
