--- a/index.html
+++ b/index.html
@@ -12,15 +12,9 @@
             <input type="search" id="searchbox" placeholder="Search">
 
             <nav class="header-buttons" id="heade-rbuttons">
-                <a href="#">
-                    <img src="discover.png" id="discover-logo">
-                </a>
-                <a href="#">
-                    <img src="like.png" id="like-logo">
-                </a>
-                <a href="#">
-                    <img src="profile.jpg" id="profile-logo">
-                </a>
+                <a href="#"><img src="discover.png" id="discover-logo"></a>
+                <a href="#"><img src="like.png" id="like-logo"></a>
+                <a href="#"><img src="profile.png" id="profile-logo"></a>
             </nav>
         </header>
     </body>
