--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <input type="search" id="searchbox" placeholder="Search">
 
             <nav class="header-buttons" id="heade-rbuttons">
-                <a href="#"><img src="discover.png" id="discover-logo"></a>
-                <a href="#"><img src="like.png" id="like-logo"></a>
-                <a href="#"><img src="profile.png" id="profile-logo"></a>
+                <a href="#"><img src="discover.png" class="headerbutton" id="discover-logo"></a>
+                <a href="#"><img src="like.png" class="headerbutton" id="like-logo"></a>
+                <a href="#"><img src="profile.png" class="headerbutton" id="profile-logo"></a>
             </nav>
         </header>
     </body>
