--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
             <input type="search" id="searchbox" placeholder="Search">
 
-            <nav class="header-buttons" id="heade-rbuttons">
+            <nav class="header-buttons" id="header-buttons">
                 <a href="#"><img src="discover.png" class="headerbutton" id="discover-logo"></a>
                 <a href="#"><img src="like.png" class="headerbutton" id="like-logo"></a>
                 <a href="#"><img src="profile.png" class="headerbutton" id="profile-logo"></a>
@@ -46,7 +46,7 @@
             </div>
 
             <div class="column" id="column-2">
-                
+
             </div>
         </div>
     </body>
