--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
             <input type="search" id="searchbox" placeholder="Search">
 
-            <nav class="header-buttons" id="header-buttons">
+            <div class="header-buttons" id="header-buttons">
                 <a href="#"><img src="discover.png" class="headerbutton" id="discover-logo"></a>
                 <a href="#"><img src="like.png" class="headerbutton" id="like-logo"></a>
                 <a href="#"><img src="profile.png" class="headerbutton" id="profile-logo"></a>
-            </nav>
+            </div>
         </header>
 
         <div class="content-area">
