--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
                             </div>
                             <a href="#" class="save-button"><img src="save.png" class="post-button-icon"></a>
                         </div>
+
+                        <a href="#" class="like-count" id="like-count-1">1.3m likes</a>
+
+                        <div class="caption-stuff">
+                            <a href="#" class="username">garfield</a>
+
+                            <span class="caption">
+                                I make money moves, you wear dirty shoes
+                            </span>
+                        </div>
+                        <span class="time">2 HOURS AGO</span>
                     </div>
                 </div>
     
