--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a href="#" class="like-count" id="like-count-1">1.3m likes</a>
 
                         <div class="caption-stuff">
-                            <a href="#" class="username">garfield</a>
+                            <a href="#" class="username" id="username-1">garfield</a>
 
                             <span class="caption">
                                 I make money moves, you wear dirty shoes
