--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a href="#" class="username" id="username-1">garfield</a>
 
                             <span class="caption">
-                                I make money moves, you wear dirty shoes
+                                I make money moves
                             </span>
                         </div>
                         <span class="time">2 HOURS AGO</span>
