--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
                                 I make money moves
                             </span>
                         </div>
+
                         <span class="time">2 HOURS AGO</span>
+
+                        <hr class="footer-line">
+
+                        <div class="comment-edit">
+                            <input type="text" id="comment" placeholder="Add a comment...">
+
+                            <a href="#" class="dots"><img src="dots.jpg" class="dots-img"></a>
+                        </div>
                     </div>
                 </div>
     
