--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="comment-edit">
                             <input type="text" id="comment" placeholder="Add a comment...">
 
-                            <a href="#" class="dots"><img src="dots.jpg" class="dots-img"></a>
+                            <a href="#" class="dots"><img src="dots.png" class="dots-img"></a>
                         </div>
                     </div>
                 </div>
