--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <hr class="footer-line">
 
                         <div class="comment-edit">
-                            <input type="text" id="comment" placeholder="Add a comment...">
+                            <input type="text" class="comment" placeholder="Add a comment...">
 
                             <a href="#" class="dots"><img src="dots.png" class="dots-img"></a>
                         </div>
