--- a/index.html
+++ b/index.html
@@ -95,6 +95,18 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="suggested">
+                    <div class="row-1">
+                        <span class="suggest-caption">
+                            Suggestions For You
+                        </span>
+                        <a href="#" class="see-all">See All</a>
+                    </div>
+                    <div class="suggestions">
+
+                    </div>
+                </div>
             </div>
 
             <div class="column" id="column-2">
