--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
                         <a href="#" class="see-all">See All</a>
                     </div>
                     <div class="suggestions">
-
+                        <div class="suggestion">
+                            <img src="jon.png" class="suggest-pic">
+                            <img src="x.png" class="x">
+                            <span>Jon Arbuckle</span>
+                            <span>Followed by garfield</span>
+                        </div>
                     </div>
                 </div>
             </div>
