--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                             <img src="x.png" class="x">
                             <span>Jon Arbuckle</span>
                             <span>Followed by garfield</span>
+                            <img src="follow.jpg" class="follow">
                         </div>
                     </div>
                 </div>
