--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
                         </span>
                         <a href="#" class="see-all">See All</a>
                     </div>
-                    
+
                     <div class="suggestions">
                         <div class="suggestion">
                             <img src="jon.png" class="suggest-pic">
                             <img src="x.png" class="x">
-                            <span>Jon Arbuckle</span>
-                            <span>Followed by garfield</span>
+                            <span class="suggest-name">Jon Arbuckle</span>
+                            <span class="suggest-meta">Followed by garfield</span>
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
                     </div>
