--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
 
                     <div class="suggestions">
                         <div class="suggestion">
-                            <img src="jon.png" class="suggest-pic">
-                            <img src="x.png" class="x">
+                            <div class="pic-x">
+                                <img src="jon.png" class="suggest-pic">
+                                <img src="x.png" class="x">
+                            </div>
                             <span class="suggest-name">Jon Arbuckle</span>
                             <span class="suggest-meta">Followed by garfield</span>
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
