--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     <div class="suggestions">
                         <div class="suggestion">
                             <div class="pic-x">
-                                <img src="jon.png" class="suggest-pic">
-                                <img src="x.png" class="x">
+                                <a href="#"><img src="jon.png" class="suggest-pic"></a>a>
+                                <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
                             <span class="suggest-name">Jon Arbuckle</span>
                             <span class="suggest-meta">Followed by garfield</span>
