--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="suggestions">
                         <div class="suggestion">
                             <div class="pic-x">
-                                <a href="#"><img src="jon.png" class="suggest-pic"></a>a>
+                                <a href="#"><img src="jon.png" class="suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
                             <span class="suggest-name">Jon Arbuckle</span>
