--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@
                             <span class="suggest-meta">Followed by garfield</span>
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
+
+                        <div class="suggestion">
+                            <div class="pic-x">
+                                <a href="#" class="suggest-pic-link"><img src="jon.png" class="suggest-pic"></a>
+                                <a href="#"></a><img src="x.png" class="x"></a>
+                            </div>
+                            <span class="suggest-name">Jon Arbuckle</span>
+                            <span class="suggest-meta">Followed by garfield</span>
+                            <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
+                        </div>
                     </div>
                 </div>
             </div>
