--- a/index.html
+++ b/index.html
@@ -115,7 +115,17 @@
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
 
-                        <div class="suggestion">
+                        <div class="suggestion" id="nermal">
+                            <div class="pic-x">
+                                <a href="#" class="suggest-pic-link"><img src="nermal.jpg" class="suggest-pic"></a>
+                                <a href="#"></a><img src="x.png" class="x"></a>
+                            </div>
+                            <span class="suggest-name">Nermal</span>
+                            <span class="suggest-meta">Trending</span>
+                            <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
+                        </div>
+
+                        <div class="suggestion" id="">
                             <div class="pic-x">
                                 <a href="#" class="suggest-pic-link"><img src="jon.png" class="suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
