--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
 
-                        <div class="suggestion" id="">
+                        <div class="suggestion" id="alene">
                             <div class="pic-x">
-                                <a href="#" class="suggest-pic-link"><img src="jon.png" class="suggest-pic"></a>
+                                <a href="#" class="suggest-pic-link"><img src="arlene.jpg" class="suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
                             <span class="suggest-name">Jon Arbuckle</span>
