--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
 
-                        <div class="suggestion" id="alene">
+                        <div class="suggestion" id="arlene">
                             <div class="pic-x">
                                 <a href="#" class="suggest-pic-link"><img src="arlene.jpg" class="suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
