--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
                             <span class="suggest-name">Jon Arbuckle</span>
-                            <span class="suggest-meta">Followed by garfield</span>
+                            <span class="suggest-meta">Followed by odie</span>
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
 
@@ -130,7 +130,7 @@
                                 <a href="#" class="suggest-pic-link"><img src="arlene.jpg" class="suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
-                            <span class="suggest-name">Jon Arbuckle</span>
+                            <span class="suggest-name">Arlene</span>
                             <span class="suggest-meta">Followed by garfield</span>
                             <a href="#" class="follow"><img src="follow.jpg" class="follow-pic"><a>
                         </div>
@@ -139,7 +139,17 @@
             </div>
 
             <div class="column" id="column-2">
+                <div class="my-profile">
+                    
+                </div>
 
+                <div class="stories">
+
+                </div>
+
+                <div class="footer">
+
+                </div>
             </div>
         </div>
     </body>
