--- a/index.html
+++ b/index.html
@@ -140,7 +140,11 @@
 
             <div class="column" id="column-2">
                 <div class="my-profile">
-                    
+                    <img src="garfield.png" class="my-pic">
+                    <div class="my-info">
+                        <span class="my-user">Garfield</span>
+                        <span class="my-name">Garfield Arbuckle</span>
+                    </div>
                 </div>
 
                 <div class="stories">
