--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="my-profile">
                     <img src="garf.jpg" class="my-pic">
                     <div class="my-info">
-                        <span class="my-user">Garfield</span>
+                        <span class="my-user">garfield</span>
                         <span class="my-name">Garfield Arbuckle</span>
                     </div>
                 </div>
