--- a/index.html
+++ b/index.html
@@ -148,7 +148,18 @@
                 </div>
 
                 <div class="stories">
+                    <div class="stories-header">
+                        <span class="stories-title">Stories</span>
+                        <a class="watch-all">Watch All</a>
+                    </div>
 
+                    <div class="story-post" id="story-post-1">
+                        <img src="jon.png" class="my-pic">
+                        <div class="story-info">
+                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-time">6 HOURS AGO</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="footer">
