--- a/index.html
+++ b/index.html
@@ -160,6 +160,46 @@
                             <span class="story-time">6 HOURS AGO</span>
                         </div>
                     </div>
+
+                    <div class="story-post" id="story-post-2">
+                        <img src="jon.png" class="my-pic">
+                        <div class="story-info">
+                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-time">6 HOURS AGO</span>
+                        </div>
+                    </div>
+
+                    <div class="story-post" id="story-post-3">
+                        <img src="jon.png" class="my-pic">
+                        <div class="story-info">
+                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-time">6 HOURS AGO</span>
+                        </div>
+                    </div>
+
+                    <div class="story-post" id="story-post-4">
+                        <img src="jon.png" class="my-pic">
+                        <div class="story-info">
+                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-time">6 HOURS AGO</span>
+                        </div>
+                    </div>
+
+                    <div class="story-post" id="story-post-5">
+                        <img src="jon.png" class="my-pic">
+                        <div class="story-info">
+                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-time">6 HOURS AGO</span>
+                        </div>
+                    </div>
+
+                    <div class="story-post" id="story-post-6">
+                        <img src="jon.png" class="my-pic">
+                        <div class="story-info">
+                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-time">6 HOURS AGO</span>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="footer">
