--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="stories">
                     <div class="stories-header">
                         <span class="stories-title">Stories</span>
-                        <a class="watch-all">Watch All</a>
+                        <a href="#" class="watch-all">Watch All</a>
                     </div>
 
                     <div class="story-post" id="story-post-1">
