--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="story-post" id="story-post-2">
-                        <img src="jon.png" class="my-pic">
+                        <img src="odie-pic" class="my-pic">
                         <div class="story-info">
                             <span class="story-user">jon_arbuckle</span>
                             <span class="story-time">6 HOURS AGO</span>
@@ -170,34 +170,34 @@
                     </div>
 
                     <div class="story-post" id="story-post-3">
-                        <img src="jon.png" class="my-pic">
+                        <img src="arlene.jpg" class="my-pic">
                         <div class="story-info">
-                            <span class="story-user">jon_arbuckle</span>
-                            <span class="story-time">6 HOURS AGO</span>
+                            <span class="story-user">arlene</span>
+                            <span class="story-time">7 HOURS AGO</span>
                         </div>
                     </div>
 
                     <div class="story-post" id="story-post-4">
-                        <img src="jon.png" class="my-pic">
+                        <img src="garf.jpg" class="my-pic">
                         <div class="story-info">
-                            <span class="story-user">jon_arbuckle</span>
-                            <span class="story-time">6 HOURS AGO</span>
+                            <span class="story-user">garfield</span>
+                            <span class="story-time">9 HOURS AGO</span>
                         </div>
                     </div>
 
                     <div class="story-post" id="story-post-5">
-                        <img src="jon.png" class="my-pic">
+                        <img src="nermal.jpg" class="my-pic">
                         <div class="story-info">
-                            <span class="story-user">jon_arbuckle</span>
-                            <span class="story-time">6 HOURS AGO</span>
+                            <span class="story-user">nermal</span>
+                            <span class="story-time">10 HOURS AGO</span>
                         </div>
                     </div>
 
                     <div class="story-post" id="story-post-6">
-                        <img src="jon.png" class="my-pic">
+                        <img src="liz.jpg" class="my-pic">
                         <div class="story-info">
-                            <span class="story-user">jon_arbuckle</span>
-                            <span class="story-time">6 HOURS AGO</span>
+                            <span class="story-user">liz</span>
+                            <span class="story-time">11 HOURS AGO</span>
                         </div>
                     </div>
                 </div>
