--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                     </div>
 
                     <div class="story-post" id="story-post-2">
-                        <img src="odie-pic" class="my-pic">
+                        <img src="odie-pic.jpg" class="my-pic">
                         <div class="story-info">
-                            <span class="story-user">jon_arbuckle</span>
+                            <span class="story-user">odie</span>
                             <span class="story-time">6 HOURS AGO</span>
                         </div>
                     </div>
