--- a/index.html
+++ b/index.html
@@ -203,7 +203,16 @@
                 </div>
 
                 <div class="footer">
-
+                    <a href="#" class="footer-link">About Us • </a>
+                    <a href="#" class="footer-link">Support • </a>
+                    <a href="#" class="footer-link">Press • </a>
+                    <a href="#" class="footer-link">API • </a>
+                    <a href="#" class="footer-link">Privacy • </a>
+                    <a href="#" class="footer-link">Terms • </a>
+                    <a href="#" class="footer-link">Directory • </a>
+                    <a href="#" class="footer-link">Profiles • </a>
+                    <a href="#" class="footer-link">Hashtags • </a>
+                    <a href="#" class="footer-link">Language</a>
                 </div>
             </div>
         </div>
