--- a/index.html
+++ b/index.html
@@ -213,6 +213,8 @@
                     <a href="#" class="footer-link">Profiles • </a>
                     <a href="#" class="footer-link">Hashtags • </a>
                     <a href="#" class="footer-link">Language</a>
+
+                    <span class="copyright">@ 2018 INSTAGRAM</span>
                 </div>
             </div>
         </div>
