--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
                         <div class="suggestion" id="nermal">
                             <div class="pic-x">
-                                <a href="#" class="suggest-pic-link"><img src="nermal.jpg" class="suggest-pic"></a>
+                                <a href="#" class="suggest-pic-link"><img src="nermal.jpg" class="suggest-pic" id="nermal-suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
                             <span class="suggest-name">Nermal</span>
@@ -127,7 +127,7 @@
 
                         <div class="suggestion" id="arlene">
                             <div class="pic-x">
-                                <a href="#" class="suggest-pic-link"><img src="arlene.jpg" class="suggest-pic"></a>
+                                <a href="#" class="suggest-pic-link"><img src="arlene.jpg" class="suggest-pic" id="arlene-suggest-pic"></a>
                                 <a href="#"></a><img src="x.png" class="x"></a>
                             </div>
                             <span class="suggest-name">Arlene</span>
